--- a/providerss/.env
+++ b/providerss/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://casder:casder1503@cluster0.q9d6k.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://casdercasder43:wiVFM7qhOTQktCLU@labsweb.81ifsat.mongodb.net/?retryWrites=true&w=majority
