--- a/tasks/.env
+++ b/tasks/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://casder:casder1503@cluster0.q9d6k.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://casdercasder43:wiVFM7qhOTQktCLU@labsweb.81ifsat.mongodb.net/?retryWrites=true&w=majority
 USERS_SERVICE_URL=http://localhost:8081
 PROVIDERS_SERVICE_URL=http://localhost:8083
 
